// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - form submitted' } UI event 1`] = `
{
  "name": "login - form submitted",
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'auth_required' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "auth_required",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'connection_unavailable' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "connection_unavailable",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'expired_credentials' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "expired_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'invalid_auth' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_auth",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'invalid_credentials' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "invalid_credentials",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'mfa_cancelled_by_the_user' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "mfa_cancelled_by_the_user",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: 'something_else' } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": "something_else",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'login - opened', properties: { errorCode: null } } UI event 1`] = `
{
  "name": "login - opened",
  "properties": {
    "errorCode": null,
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'mfa - opened' } UI event 1`] = `
{
  "name": "mfa - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'search - link item selected' } UI event 1`] = `
{
  "name": "search - link item selected",
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'search - opened' } UI event 1`] = `
{
  "name": "search - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs { name: 'search - term updated', term: 'search term', tab: 'tab', properties: { term: 'search term', tab: 'tab' } } UI event 1`] = `
{
  "payload": {
    "name": "search - term updated",
    "properties": {
      "tab": "tab",
      "term": "search term",
    },
    "tab": "tab",
    "term": "search term",
  },
  "tab": "tab",
  "term": "search term",
}
`;

exports[`ArgyleModalAdapter > event:other > triggerAccountCreated logs ApplicantCreatedArgyleAccount event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > triggerAccountError logs ApplicantEncounteredArgyleAccountError event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > triggerAccountRemoved logs ApplicantRemovedArgyleAccount event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > open > tracks user action and fetches token 1`] = `
[
  "ApplicantSelectedEmployerOrPlatformItem",
  {
    "is_default_option": true,
    "item_id": "id",
    "item_name": "test-name",
    "item_type": "response-type",
    "locale": "en",
    "provider_name": "pinwheel",
  },
]
`;
